--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -59,7 +59,7 @@
                     </li>
                 </ul>
                 <p class="copyright text-muted">Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }} & Hosted
-                    by <a href="https://pages.coding.me" style="font-weight: bold">Coding Pages</a></p>
+                    by <a href="https://pages.github.com" style="font-weight: bold">Github Pages</a></p>
             </div>
         </div>
     </div>
